# detector

./: CMakeLists.txt  README.md  main.cpp
modules/capture/: VideoCapture.cpp  VideoCapture.h
modules/darknet/: Makefile  cmake_install.cmake  net_cam_v4.sh  video_yolov3.sh  video_yolov4.sh
modules/darknet/include/: yolo_v2_class.hpp
modules/support/: Support.cpp  Support.h
modules/util/: Util.cpp  Util.h
modules/util/config/: Config.cpp  Config.h
resources/: download_weights.sh  yolov4.cfg
